fix img align center

--- a/css/am0200.css
+++ b/css/am0200.css
@@ -1,5 +1,3 @@
-@charset "utf-8";
-
 /* reset */
 /*
 body, div, h1, h2, p, ul, li {
@@ -373,20 +371,29 @@ img {
     height: 100%;
     position: relative;
 }
-.standard li div.img {
+.standard li.imgs div {
     width:100%;
     height: 100%;
-    display:-moz-box;
-    -moz-box-pack:center;
-    -moz-box-align:center;
-    display:-webkit-box;
-    -webkit-box-pack:center;
-    -webkit-box-align:center;
     position: relative;
+    text-align: center;
 }
-.standard li div.img:before {
+.standard li.imgs div:before, .standard li.imgs div:after {
+    content: '';
+    width: 1%;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+} 
+.standard li.imgs img {
+    vertical-align: middle;
+    display: inline-block;
+    max-width: 98%;
+    position: relative;
+    z-index: 3;
+}
+.standard li.imgs:before {
     position: absolute;
-    z-index: -2;
+    z-index: 1;
     left: 50%;
     top: 50%;
     margin-left: -30px;
@@ -400,9 +407,9 @@ img {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
 } 
-.standard li div.img:after {
+.standard li.imgs:after {
     position: absolute;
-    z-index: -1;
+    z-index: 2;
     left: 50%;
     top: 50%;
     margin-left: -12px;
@@ -451,6 +458,7 @@ img {
     width: 100%;
     bottom: 7%;
     text-align: center;
+    z-index: 4;
 }
 .dots span {
     display: inline-block;
